syntax = "proto3";

package dcrwalletgui;

//import "api.proto";

service AppConfig {
  rpc GetConfig(GetConfigRequest) returns (AppConfiguration);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}

message GetConfigRequest { bytes passphrase = 1; }

message SetConfigRequest {
  AppConfiguration app_config = 1;
  bytes passphrase = 2;
}

message SetConfigResponse {
  enum UpdateStatus {
    STATUS_SUCCESS = 0;
    STATUS_ERROR = 1;
  }
  UpdateStatus update_status = 1;
  int32 error_code = 2;
  string error_description = 3;
}

enum Network {
  MAINNET = 0;
  TESTNET = 1;
  SIMNET = 2;
}

message RPCEndpoint {
  string id = 1;
  string hostname = 2;
  uint32 port = 3;
  string username = 4;
  string password = 5;
  string cert_file_name = 6;
  string cert_blob = 7;
  Network network = 8;
  string label = 9;
}

message GRPCEndpoint {
  string id = 1;
  string hostname = 2;
  uint32 port = 3;
  string cert_file_name = 4;
  string cert_blob = 5;
  Network network = 6;
  string label = 7;
  bool is_watching_only = 8;
  uint32 active_network = 9;
  uint32 coin_type = 10;
}

message AccountPreference {
  uint32 account_number = 1;
  bool is_hidden = 2;
  uint32 display_order = 3;
}

message WalletPreferences {
  string wallet_endpoint_id = 1;
  repeated AccountPreference account_prefs = 2;
}

message RunTicketBuyerRequest {
	bytes passphrase = 1;
	uint32 account = 2;
	uint32 voting_account = 3;
	int64 balance_to_maintain = 4;
	string voting_address = 5;
	string pool_address = 6;
	double pool_fees = 7;
}


message RunAccountMixerRequest {
	bytes passphrase = 1;
	uint32 mixed_account = 2;
	uint32 mixed_account_branch = 3;
	uint32 change_account = 4;
	string cspp_server = 5;
}

message AppConfiguration {
  RPCEndpoint dcrd_endpoint = 1;
  repeated GRPCEndpoint wallet_endpoints = 2;
  string default_wallet_endpoint_id = 3;
  repeated WalletPreferences wallet_preferences = 4;
  RunAccountMixerRequest account_mixer_request_defaults = 5;
  RunTicketBuyerRequest run_auto_buyer_request_defaults = 6;
  repeated string alt_display_currencies = 7;
}


service NetworkService {
  rpc CheckConnection(CheckConnectionRequest) returns (CheckConnectionResponse);
  rpc ConnectWallet(ConnectWalletRequest) returns (ConnectWalletResponse);
}

message CheckConnectionRequest {
  GRPCEndpoint grpc_endpoint = 1;
  RPCEndpoint rpc_endpoint = 2;
}

message CheckConnectionResponse {
  bool isSuccess = 1;
  string error = 2;
}

message ConnectWalletRequest { 
  string wallet_endpoint_id = 1; 
}

message ConnectWalletResponse {
  bool isSuccess = 1;
  string error = 2;
  GRPCEndpoint endpoint = 3;
}

// exchange rates
message AltCurrencyRates {
  message AltCurrencyRate {
	string currency_code = 1;
	float current_rate = 2;
  }
  repeated AltCurrencyRate rates = 1;
  int64 last_updated_ts = 2;
}

service ExchangeRates {
  rpc GetMarketChart(GetMarketChartRequest) returns (GetMarketChartResponse);
}

message GetMarketChartRequest {
  string currency_code = 1;
  uint32 days = 2;
}

message MarketChartDataPoint {
  int64 timestamp = 1;
  float exchange_rate = 2;
}

message GetMarketChartResponse {
  repeated MarketChartDataPoint datapoints = 1;
}

/*
message LorcaMessage {
  message Error { string error = 1; }
  bytes payload = 1;
  repeated bytes apayload = 2;
  Error err = 3;
}
*/
